--- a/Matrix Factorization.ipynb
+++ b/Matrix Factorization.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "One of the most common way of factorizing matrices is SVD. In SVD we construct 3 matrices namely `U`, `V* (V Transpose)` and `Σ (Sigma)`. Here U and V acts as factors while sigma acts as the regulator for the data dimensions.\r\n",
     "<pre style='color:yellow'>\r\n",
-    "<center>M = UΣV*</center>\r\n",
+    "<center>M = U.Σ.V*</center>\r\n",
     "\r\n",
     "- M  = Data Marix\r\n",
     "- U  = User feature matrix\r\n",
@@ -100,6 +100,7 @@
     "    U_reduced= np.mat(U[:,:k])\r\n",
     "    Vt_reduced = np.mat(V_t[:k,:])\r\n",
     "    Sigma_reduced = np.eye(k)*sigma[:k]\r\n",
+    "    \r\n",
     "    return U_reduced, Sigma_reduced, Vt_reduced\r\n",
     "\r\n",
     "U_reduced, Sigma_reduced, Vt_reduced = rank_k(4)\r\n",
@@ -121,6 +122,181 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Here based on the column and row indices,we can identfy the related ratings for a particular item. \r\n",
+    "\r\n",
+    "Also as we can see, we need to do 3 multiplications to get the M_hat matrix. To avoid that we can only save the decomposed matrices. We will take the squareroot of the Σ matrix and multiply it with each of the other matrices as below to get the decomposed matrices."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "def rank_k_v2(k):\r\n",
+    "    '''\r\n",
+    "    Updated version of rank reduction function.\r\n",
+    "    '''\r\n",
+    "    U_reduced= np.mat(U[:,:k])\r\n",
+    "    Vt_reduced = np.mat(V_t[:k,:])\r\n",
+    "    Sigma_reduced = np.eye(k)*sigma[:k]\r\n",
+    "    Sigma_sqrt = np.sqrt(Sigma_reduced)\r\n",
+    "\r\n",
+    "    return U_reduced*Sigma_sqrt, Sigma_sqrt*Vt_reduced\r\n",
+    "\r\n",
+    "U_reduced, Vt_reduced = rank_k_v2(4)\r\n",
+    "M_hat = U_reduced * Vt_reduced\r\n",
+    "\r\n",
+    "print(M_hat)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 4.87147087  3.11444112  0.04893344  2.23870109  1.94083799  1.920736  ]\n",
+      " [ 3.49344678  3.45787572  4.19067126  0.94886084  2.61521613  2.82032378]\n",
+      " [ 5.22111879  1.8034114   4.91572235  1.58969108  1.09528095  1.14205388]\n",
+      " [ 3.25351113  4.77315242  2.90384191 -0.4721446   1.14157873  1.13455568]\n",
+      " [ 2.93061675  3.04700483  3.03112668  2.11137004  4.29526848  4.67079756]\n",
+      " [ 2.27270952  2.76664391  1.89315701  2.50473044  4.91596291  5.35161957]]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "But the problem in the above is that, we marked the values/ ratings we did not know with zero. It causes the decomposed matrices to generate values close to zero as well. Therefore to avoid this problem we use a technique called `Imputation`.\r\n",
+    "\r\n",
+    "Basically this means that we can either normalize the each data row such that mean is zero or we can calculate the mean for each user/item and fill the null values with it. Apparently both these techniques are called Imputation methods. By doing this we can get somewhat sensible value for the null values in decomposition."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### __Adding new user to the decomposed matrix__\r\n",
+    "\r\n",
+    "In SVD method, it is really easy to add new users to the decompsed matrix by nature. Since matrix multiplication works in a certain way, we can directly append user row to the rating (U) matrix.\r\n",
+    "\r\n",
+    "<pre style='color:yellow'>\r\n",
+    "<center>u_reduced = u_original * Vt * Σ^-1</center>\r\n",
+    "\r\n",
+    "here,\r\n",
+    "\r\n",
+    "- u_reduced = reduced vector of user ratings.\r\n",
+    "- u_original = original ratings given by the new user.\r\n",
+    "- Vt = item Matrix transpose from SVD method.\r\n",
+    "- Σ^-1 = Inverse of the Σ matrix of SVD.\r\n",
+    "\r\n",
+    "</pre>"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "from numpy.linalg import inv\r\n",
+    "\r\n",
+    "# new user original ratings\r\n",
+    "u_original = np.array([4.0, 5.0, 0.0, 3.0, 3.0, 0.0])\r\n",
+    "\r\n",
+    "# reduced vector\r\n",
+    "u_reduced = u_original *Vt_reduced.T* inv(Sigma_reduced)\r\n",
+    "\r\n",
+    "print(u_reduced)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[-1.45894059  0.23555071  1.9293472  -0.58325078]]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### __Adding new item to the decomposed matrix__\r\n",
+    "\r\n",
+    "Just as we add a new user to the decomposed matrix, we can add new items to the V matrix as well.\r\n",
+    "\r\n",
+    "<pre style='color:yellow'>\r\n",
+    "<center>i_reduced = i_original_t * U * Σ^-1</center>\r\n",
+    "\r\n",
+    "here,\r\n",
+    "\r\n",
+    "- i_reduced = the vector in the reduced space to represent the new item.\r\n",
+    "- i_original_t = original item ratings transpose vector.\r\n",
+    "- U = User Matrix from SVD method.\r\n",
+    "- Σ^-1 = Inverse of the Σ matrix of SVD.\r\n",
+    "\r\n",
+    "</pre>\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> One thing you might wonder is why the heck we are decomposing the matrices filled with mean values and then using the decomposed matrices to estimate the original matrix again. Answer would be, the point of decomposing is reducing the size of original matrix and extracting hidden topics for further processing."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ## __Recommendations with SVD__\r\n",
+    "\r\n",
+    "To do recommendations using SVD we can use few methods.\r\n",
+    "\r\n",
+    "1. Calculate M_hat and use it to find the highest rated item for the user (which they havent consumed). (weird to me as well, apparently it works! :-/ )\r\n",
+    "2. Can use the decomposed user matrix to do the collabarative filtering\r\n",
+    "3. Using the item similarity on the decomposed item matrix.\r\n",
+    "\r\n",
+    "Can test the 3 methods to see how it work.\r\n",
+    "\r\n",
+    "> ## **Problems of SVD**\r\n",
+    "\r\n",
+    "1. Need to fill out the empty values.\r\n",
+    "2. Slow to calculate on large matrices.\r\n",
+    "3. Even though we can add new users and items on the go, we need to recalculate the Sigma matrix often to make the decomposition accurate.\r\n",
+    "4. Not always explainable.\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
