--- a/Matrix Factorization.ipynb
+++ b/Matrix Factorization.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Matrix factorization for finding Hidden genres"
+    "# **Matrix factorization for finding Hidden genres**"
    ],
    "metadata": {}
   },
@@ -31,7 +31,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## SVD (Singular Value Decomposition)\r\n",
+    "# SVD (Singular Value Decomposition)\r\n",
     "\r\n"
    ],
    "metadata": {}
@@ -274,6 +274,45 @@
     "2. Slow to calculate on large matrices.\r\n",
     "3. Even though we can add new users and items on the go, we need to recalculate the Sigma matrix often to make the decomposition accurate.\r\n",
     "4. Not always explainable.\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Baseline Predictors\r\n",
+    "\r\n",
+    "Practically speaking, Baseline predictors are type of methods that we can use for recommend items to users. \r\n",
+    "\r\n",
+    "What we do in this technique is that, we measure the inherent bias for items/ users and them use those biases as baseline for our prediction. Intuition behind baseline predictors is that if a item is considered good, its general ratings would be high. Opposite would also be true for the bad items. Also some users would be inherently highly negative/positive. In all these cases we can see some kind of bias towards a item. If we can measure this bias, it can be used as a baseline, which is what we try to do in Baseline predictors.\r\n",
+    "\r\n",
+    "We use following equation as the predictor.\r\n",
+    "\r\n",
+    "\r\n",
+    "<pre style='color:yellow'>\r\n",
+    "<center>r_ui = µ + b_u + b_i</center>\r\n",
+    "\r\n",
+    "here,\r\n",
+    "\r\n",
+    "- r_ui = base prediction for item i from user u.\r\n",
+    "- µ = average of all ratings\r\n",
+    "- b_u = user bias\r\n",
+    "- b_i = item bias\r\n",
+    "\r\n",
+    "</pre>\r\n",
+    "\r\n",
+    "We can calculate the user bias and item bias terms using existing rating.\r\n",
+    "\r\n",
+    " 1. Calculate the average of all ratings by taking sum of all elements and dividing by number of non zero elements.\r\n",
+    " 2. For the given user select a rating already given and fill the r_ui and µ values. (at this step, we know them)\r\n",
+    " 3. Do that for many items. In this way we can get many formulas.\r\n",
+    " 4. Solve those equations as a least-square problem to get the bias terms.\r\n",
+    "\r\n",
+    "\r\n",
+    "<center><image src=\"./images/Baseline predictors.jpg\" width=\"200px\" /></center>\r\n",
+    "\r\n",
+    "Since this calculation is time consuming and comparatively complex, more simpler method is used as well.\r\n",
     "\r\n"
    ],
    "metadata": {}
