baseline predictors impl

--- a/Matrix Factorization.ipynb
+++ b/Matrix Factorization.ipynb
@@ -312,9 +312,231 @@
     "\r\n",
     "<center><image src=\"./images/Baseline predictors.jpg\" width=\"200px\" /></center>\r\n",
     "\r\n",
-    "Since this calculation is time consuming and comparatively complex, more simpler method is used as well.\r\n",
+    "Since this calculation is time consuming and comparatively complex, more simpler method is used as well. In this method, we first calculate the bias for each user (b_u), by taking the sum of the difference between user's ratings and the mean. Then we divide that value by number of ratings provided by user. This gives us average difference between the mean and the user's ratings.\r\n",
+    "\r\n",
+    "<center><image src=\"./images/Baseline User bias.jpg\" width=\"200px\" /></center>\r\n",
+    "\r\n",
+    "Then after calculating biases for all users we can calculate items biases in the same way as below.\r\n",
+    "\r\n",
+    "<center><image src=\"./images/Baseline Item bias.jpg\" width=\"200px\" /></center>\r\n",
+    "\r\n",
+    "Those above values can be used instead of using imputation methods, to make any matrix factorization method to work better. Below is a sample implementation of the related calculations.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "global_mean = M[M>0].mean().mean()  #To calculate the global mean of matrix values\r\n",
+    "M_minus_mean = M[M>0] - global_mean  # r_iu - global mean\r\n",
+    "user_bias = M_minus_mean.T.mean()\r\n",
+    "item_bias = M_minus_mean.apply(lambda r: r - user_bias).mean()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "M_minus_mean"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                mib        st        av         b        ss        lm\n",
+       "Sara       2.002778  0.002778       NaN -0.997222 -0.997222 -0.997222\n",
+       "Jesper     1.002778  0.002778  1.002778       NaN  0.002778  0.002778\n",
+       "Therese    2.002778 -0.997222  2.002778 -0.997222 -1.997222 -1.997222\n",
+       "Helle      0.002778  2.002778  0.002778       NaN -1.997222 -1.997222\n",
+       "Pietro     0.002778  0.002778  0.002778 -0.997222  1.002778  2.002778\n",
+       "Ekaterina -0.997222  0.002778 -0.997222  0.002778  2.002778  2.002778"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mib</th>\n",
+       "      <th>st</th>\n",
+       "      <th>av</th>\n",
+       "      <th>b</th>\n",
+       "      <th>ss</th>\n",
+       "      <th>lm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Sara</th>\n",
+       "      <td>2.002778</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>-0.997222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jesper</th>\n",
+       "      <td>1.002778</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>1.002778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>0.002778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Therese</th>\n",
+       "      <td>2.002778</td>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>2.002778</td>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>-1.997222</td>\n",
+       "      <td>-1.997222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Helle</th>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>2.002778</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.997222</td>\n",
+       "      <td>-1.997222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pietro</th>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>1.002778</td>\n",
+       "      <td>2.002778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ekaterina</th>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>-0.997222</td>\n",
+       "      <td>0.002778</td>\n",
+       "      <td>2.002778</td>\n",
+       "      <td>2.002778</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "user_bias"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Sara        -0.197222\n",
+       "Jesper       0.402778\n",
+       "Therese     -0.330556\n",
+       "Helle       -0.397222\n",
+       "Pietro       0.336111\n",
+       "Ekaterina    0.336111\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "item_bias"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "mib    0.644444\n",
+       "st     0.144444\n",
+       "av     0.333333\n",
+       "b     -0.783333\n",
+       "ss    -0.355556\n",
+       "lm    -0.188889\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Above values show the bias values for respective items and users. We can see Sara has generally negetive bias and Jesper has positive rating bias. By looking at the original ratings given by those 2 users, we can verify this as well.\r\n",
+    "\r\n",
+    "> Also one other factor we need to consider here is time. User and item biases may change over time and therefore we need to consider it to make the predictions more accurate. (We can use weighted averages etc.)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Funk SVD\r\n",
+    "\r\n",
     "\r\n"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
