--- a/Matrix Factorization.ipynb
+++ b/Matrix Factorization.ipynb
@@ -512,45 +512,263 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Funk SVD\r\n",
+    "# Funk SVD (Regularized SVD)\r\n",
     "\r\n",
-    "\r\n"
+    "This algorithm was developed to fix some of the problems of SVD, mainly to work with sparse matrix (where number of filled values are low). In Funk SVD, we use RMSE along with gradient descent to approach a better matrix factorization.\r\n",
+    "\r\n",
+    "> ### Root Mean Squared Error\r\n",
+    "\r\n",
+    "> In the context of user rating and item rating matrix multiplication, we assume that those two create the rating matrix. So RMSE would be a value related to the summation of difference between the actual rating and the values got multiplied from the rating/item matrices.\r\n",
+    "\r\n",
+    "<center><image src=\"./images/RMSE baseline.jpg\" width=\"200px\" /></center>\r\n",
+    "\r\n",
+    "> Here `u` means user matrix u row and `i` means item matrix i'th column, which depicts the r_hat in the (u,i) position M_hat matrix.\r\n",
+    "\r\n",
+    "Then we use gradient descent to minimize the above value.\r\n",
+    "\r\n",
+    "\r\n",
+    "> ### Gradient Descent\r\n",
+    "\r\n",
+    "> This very well known method in ML. Basically we start in a random position of the output and go through the lowest gradient direction which would minimize the RMSE. Read it in either ML related book or statistic book for more information.\r\n",
+    "\r\n",
+    "In funk SVD there's no sigma matrix. Instead we directly have 2 matrices. Therefore we first need to figure out number of features we need to keep in the factorized form. This is usually done by running the algorithm for several different number of features and selecting the best value. Also it is worth noting that bias terms are also considered when estimating the factorizations.\r\n",
+    "\r\n",
+    "When predicting using Funk SVD, we can use the same techniques as the normal SVD without an issue.\r\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 1052,
+   "source": [
+    "def predict(user, item):\r\n",
+    "    avg = all_movies_mean\r\n",
+    "    pq = np.dot(item_factors[item], user_factors[user].T)\r\n",
+    "    b_ui = avg + user_bias[user] + item_bias[item]\r\n",
+    "    prediction = b_ui + pq\r\n",
+    "\r\n",
+    "    return prediction"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 1053,
+   "source": [
+    "def stocastic_gradient_descent(index_randomized, ratings):\r\n",
+    "    mse = 0\r\n",
+    "    \r\n",
+    "    for inx in index_randomized:\r\n",
+    "        rating_row = ratings[inx]\r\n",
+    "        u = inx\r\n",
+    "\r\n",
+    "        item_randomized = random.sample(range(0, len(rating_row)), len(rating_row))\r\n",
+    "        \r\n",
+    "        for i in item_randomized:\r\n",
+    "            rating = rating_row[i]\r\n",
+    "            prediction = predict(u, i)\r\n",
+    "            \r\n",
+    "            err = (rating - prediction)\r\n",
+    "\r\n",
+    "            user_bias[u] += b_lr * (err - bias_r * user_bias[u])\r\n",
+    "            item_bias[i] += b_lr * (err - bias_r * item_bias[i])\r\n",
+    "\r\n",
+    "            user_fac = user_factors[u]\r\n",
+    "            item_fac = item_factors[i]\r\n",
+    "            \r\n",
+    "            user_factors[u] +=  lr * (err * item_fac\r\n",
+    "                                                - r * user_fac)\r\n",
+    "            item_factors[i] +=  lr * (err * user_fac\r\n",
+    "                                                - r * item_fac)\r\n",
+    "\r\n",
+    "            # Calculating RMSE\r\n",
+    "            mse += (err) ** 2\r\n",
+    "\r\n",
+    "    return (mse)"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 1054,
+   "source": [
+    "from collections import defaultdict\r\n",
+    "\r\n",
+    "k = 3  # Number of features to keep in the factorized matrices\r\n",
+    "\r\n",
+    "movies = ['mib', 'st', 'av', 'b', 'ss', 'lm']\r\n",
+    "users = ['Sara', 'Jesper', 'Therese', 'Helle', 'Pietro', 'Ekaterina']\r\n",
+    "M = np.array([\r\n",
+    "                    [5.0, 3.0, 0.0, 2.0, 2.0, 2.0],\r\n",
+    "                    [4.0, 3.0, 4.0, 0.0, 3.0, 3.0],\r\n",
+    "                    [5.0, 2.0, 5.0, 2.0, 1.0, 1.0],\r\n",
+    "                    [3.0, 5.0, 3.0, 0.0, 1.0, 1.0],\r\n",
+    "                    [3.0, 3.0, 3.0, 2.0, 4.0, 5.0],\r\n",
+    "                    [2.0, 3.0, 2.0, 3.0, 5.0, 5.0]]\r\n",
+    "                )\r\n",
+    "\r\n",
+    "item_factors = np.random.uniform(size=(len(movies), k))\r\n",
+    "user_factors = np.random.normal(size=(len(users), k))\r\n",
+    "\r\n",
+    "all_movies_mean = M[M>0].mean().mean() \r\n",
+    "\r\n",
+    "user_bias = defaultdict(lambda: 0)\r\n",
+    "item_bias = defaultdict(lambda: 0)"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 1055,
+   "source": [
+    "import random\r\n",
+    "from datetime import datetime\r\n",
+    "\r\n",
+    "iterations = 0\r\n",
+    "last_err = 0\r\n",
+    "iteration_err = sys.maxsize\r\n",
+    "finished = False\r\n",
+    "\r\n",
+    "lr      = 0.05\r\n",
+    "b_lr    = 0.01\r\n",
+    "r       = 0.001\r\n",
+    "bias_r  = 0.001\r\n",
+    "\r\n",
+    "        \r\n",
+    "while not finished:\r\n",
+    "\r\n",
+    "    index_randomized = random.sample(range(0, len(M)), len(M))\r\n",
+    "\r\n",
+    "    iteration_err = stocastic_gradient_descent( index_randomized,\r\n",
+    "                                                M)\r\n",
+    "\r\n",
+    "    if(iterations%10==0):\r\n",
+    "        print(iteration_err)\r\n",
+    "\r\n",
+    "    iterations += 1\r\n",
+    "    if(iterations >= 100):\r\n",
+    "        break\r\n",
+    "                        \r\n",
+    "    last_err = iteration_err\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "100.07094850033116\n",
+      "24.16643649902043\n",
+      "10.466719350275437\n",
+      "5.976312908919969\n",
+      "4.744028823950094\n",
+      "4.289225986111172\n",
+      "4.106737963987126\n",
+      "4.037670240023444\n",
+      "3.9814951536063043\n",
+      "3.949055008435495\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1056,
+   "source": [
+    "temp = np.dot(item_factors, user_factors.T).T"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 1057,
+   "source": [
+    "user_bias[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-0.14336531811425812"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1057
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1058,
+   "source": [
+    "item_bias[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.4797200154460631"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1058
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1059,
+   "source": [
+    "(temp[0] + user_bias[0] + item_bias[0] + all_movies_mean)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([4.83187567, 3.767716  , 0.2096792 , 3.92966637, 2.33925628,\n",
+       "       2.08336076])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1059
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1060,
+   "source": [
+    "M[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([5., 3., 0., 2., 2., 2.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1060
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Therefore we can observe that, decomposed matrices and biased terms somewhat converge to the original data matrix. But there are several concerns to be addressed. In some scenarios, there may be unexplainable ratings can be observed. This is due to large negative/positive bias terms compared to ratings. We need to fix the solution to address it. Also it is required to fine tune the parameters to get the best results which can be exhausting and time consuming."
+   ],
    "metadata": {}
   },
   {
