Hybrid model details added.

--- a/Matrix Factorization.ipynb
+++ b/Matrix Factorization.ipynb
@@ -592,11 +592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1054,
+   "execution_count": 1076,
    "source": [
     "from collections import defaultdict\r\n",
     "\r\n",
-    "k = 3  # Number of features to keep in the factorized matrices\r\n",
+    "k = 4  # Number of features to keep in the factorized matrices\r\n",
     "\r\n",
     "movies = ['mib', 'st', 'av', 'b', 'ss', 'lm']\r\n",
     "users = ['Sara', 'Jesper', 'Therese', 'Helle', 'Pietro', 'Ekaterina']\r\n",
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1055,
+   "execution_count": 1077,
    "source": [
     "import random\r\n",
     "from datetime import datetime\r\n",
@@ -659,16 +659,16 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100.07094850033116\n",
-      "24.16643649902043\n",
-      "10.466719350275437\n",
-      "5.976312908919969\n",
-      "4.744028823950094\n",
-      "4.289225986111172\n",
-      "4.106737963987126\n",
-      "4.037670240023444\n",
-      "3.9814951536063043\n",
-      "3.949055008435495\n"
+      "150.1253625007326\n",
+      "13.704382426816371\n",
+      "3.5566674566019247\n",
+      "1.2584390067831137\n",
+      "0.6857067559120158\n",
+      "0.507457947172504\n",
+      "0.44721198451693267\n",
+      "0.4134160141825887\n",
+      "0.4041218122130324\n",
+      "0.4033915553273043\n"
      ]
     }
    ],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1056,
+   "execution_count": 1078,
    "source": [
     "temp = np.dot(item_factors, user_factors.T).T"
    ],
@@ -685,81 +685,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1057,
+   "execution_count": 1082,
    "source": [
-    "user_bias[0]"
+    "user_bias[1]"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "-0.14336531811425812"
+       "-0.10417435081602477"
       ]
      },
      "metadata": {},
-     "execution_count": 1057
+     "execution_count": 1082
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1058,
+   "execution_count": 1083,
    "source": [
-    "item_bias[0]"
+    "item_bias[1]"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.4797200154460631"
+       "0.026753161115533313"
       ]
      },
      "metadata": {},
-     "execution_count": 1058
+     "execution_count": 1083
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1059,
+   "execution_count": 1084,
    "source": [
-    "(temp[0] + user_bias[0] + item_bias[0] + all_movies_mean)"
+    "(temp[1] + user_bias[1] + item_bias[1] + all_movies_mean)"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([4.83187567, 3.767716  , 0.2096792 , 3.92966637, 2.33925628,\n",
-       "       2.08336076])"
+       "array([3.86931242, 3.01132768, 4.14420008, 0.49226588, 2.99729188,\n",
+       "       3.06771917])"
       ]
      },
      "metadata": {},
-     "execution_count": 1059
+     "execution_count": 1084
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1060,
+   "execution_count": 1085,
    "source": [
-    "M[0]"
+    "M[1]"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([5., 3., 0., 2., 2., 2.])"
+       "array([4., 3., 4., 0., 3., 3.])"
       ]
      },
      "metadata": {},
-     "execution_count": 1060
+     "execution_count": 1085
     }
    ],
    "metadata": {}
@@ -767,15 +767,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Therefore we can observe that, decomposed matrices and biased terms somewhat converge to the original data matrix. But there are several concerns to be addressed. In some scenarios, there may be unexplainable ratings can be observed. This is due to large negative/positive bias terms compared to ratings. We need to fix the solution to address it. Also it is required to fine tune the parameters to get the best results which can be exhausting and time consuming."
+    "Therefore we can observe that, decomposed matrices and biased terms somewhat converge to the original data matrix. But there are several concerns to be addressed. In some scenarios, there may be unexplainable ratings can be observed. This is due to large negative/positive bias terms compared to ratings. We need to fix the solution to address it. Also it is required to fine tune the parameters to get the best results which can be exhausting and time consuming.\r\n",
+    "\r\n",
+    "When running the factorization,\r\n",
+    "\r\n",
+    "* K (feature size) is important\r\n",
+    "* learning rates for terms need to adjusted to get the training speed to optimal level.\r\n",
+    "* regularization terms also need to adjusted, to avoid highly positive or negative values. (The larger the regularization the more the factors are kept close to 0)\r\n",
+    "* Number of iterations are also important to get proper results. Too low interations, would yield bad factors and too much interations would cause factors to overshoot the required range."
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
